[Recognizer] Use java 11