@@ -6,8 +6,10 @@
   <packaging>jar</packaging>
   <version>0.1-SNAPSHOT</version>
   <name>recognizer</name>
+
   <properties>
-    <java.version>1.9</java.version>
+    <java.version>11</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -22,8 +24,11 @@
     <commons-lang.version>3.7</commons-lang.version>
     <guava.version>23.6-jre</guava.version>
     <jackson-databind.version>2.9.7</jackson-databind.version>
-    <jaxb-api.version>2.2.11</jaxb-api.version>
-    <jaxb-core.version>2.3.0</jaxb-core.version>
+    <javax.activation.version>1.2.0</javax.activation.version>
+    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+    <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
+    <jaxb-core.version>2.3.0.1</jaxb-core.version>
+    <jaxb-impl.version>2.4.0-b180830.0438</jaxb-impl.version>
     <jaxb2-maven-plugin.version>2.3.1</jaxb2-maven-plugin.version>
     <jaxb-xjc-jdk9.version>2.3.0</jaxb-xjc-jdk9.version>
     <json-path.version>2.3.0</json-path.version>
@@ -36,13 +41,12 @@
     <mockito.version>2.21.0</mockito.version>
     <mockserver.version>5.4.1</mockserver.version>
     <powermock.version>1.7.1</powermock.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.version>1.7.5</slf4j.version>
     <unirest-java.version>1.4.9</unirest-java.version>
   </properties>
   <dependencies>
 
-    <!-- Testing -->
+    <!-- testing -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -86,7 +90,7 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- Kafka -->
+    <!-- kafka -->
     <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka_2.12</artifactId>
@@ -113,7 +117,7 @@
       <version>${kafka-clients.version}</version>
     </dependency>
 
-    <!-- Jackson -->
+    <!-- jackson -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
@@ -168,37 +172,33 @@
       <artifactId>commons-lang3</artifactId>
       <version>${commons-lang.version}</version>
     </dependency>
-  </dependencies>
 
-  <!-- repositories with java 9 module dependency versions -->
-  <repositories>
-    <repository>
-      <id>central</id>
-      <name>Maven Repository Switchboard</name>
-      <layout>default</layout>
-      <url>http://repo1.maven.org/maven2</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-  <pluginRepositories>
-    <pluginRepository>
-      <id>central</id>
-      <name>Maven Plugin Repository</name>
-      <url>http://repo1.maven.org/maven2</url>
-      <layout>default</layout>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <releases>
-        <updatePolicy>never</updatePolicy>
-      </releases>
-    </pluginRepository>
-  </pluginRepositories>
+    <!-- jaxb, and other EE-modules -->
+    <dependency>
+      <groupId>com.sun.activation</groupId>
+      <artifactId>javax.activation</artifactId>
+      <version>${javax.activation.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>${jaxb-impl.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>${jaxb-api.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <version>${jaxb-core.version}</version>
+    </dependency>
+  </dependencies>
 
   <build>
     <plugins>
+
       <!-- compile -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -207,11 +207,6 @@
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
-          <!-- java modules: -->
-          <compilerArgs>
-            <arg>--add-modules</arg>
-            <arg>java.xml.bind,java.activation</arg>
-          </compilerArgs>
           <fork>true</fork>
         </configuration>
       </plugin>
@@ -227,7 +222,7 @@
             <phase>compile</phase>
             <configuration>
               <configLocation>https://raw.githubusercontent.com/HuygensING/checkstyle/master/checkstyle_config.xml</configLocation>
-              <encoding>UTF-8</encoding>
+              <encoding>${project.build.sourceEncoding}</encoding>
               <consoleOutput>true</consoleOutput>
               <failsOnError>true</failsOnError>
               <!-- Excludes when package name contains 'generated': -->
@@ -250,21 +245,9 @@
         <version>${mavens-surefire-plugin.version}</version>
         <configuration>
           <!-- java modules -->
-          <argLine>
-            --add-modules java.xml.bind
-            --add-opens java.base/java.lang=ALL-UNNAMED
-            --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
-          </argLine>
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=permit</argLine>
           <forkMode>once</forkMode>
         </configuration>
-        <dependencies>
-          <!-- java modules -->
-          <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>${jaxb-api.version}</version>
-          </dependency>
-        </dependencies>
       </plugin>
 
       <!-- build executable jar -->
@@ -321,12 +304,11 @@
         <configuration>
           <packageName>nl.knaw.meertens.clariah.vre.recognizer.generated.fits.output</packageName>
         </configuration>
-        <!-- java modules -->
         <dependencies>
           <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-xjc-jdk9</artifactId>
-            <version>${jaxb-xjc-jdk9.version}</version>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-xjc</artifactId>
+            <version>${jaxb-impl.version}</version>
           </dependency>
           <dependency>
             <groupId>com.sun.xml.bind</groupId>
@@ -340,7 +322,7 @@
           </dependency>
         </dependencies>
       </plugin>
+
     </plugins>
   </build>
-
 </project>
